--- a/comments.html
+++ b/comments.html
@@ -1,117 +1,253 @@
 <!DOCTYPE html>
 <html lang="ru-RU">
+
 <head>
-	<meta charset="UTF-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
-	<title>Отзывы</title>
+    <title>Отзывы</title>
 </head>
+
 <body>
-	 <div class="wrapper">
-        <div class="header">
+    <div class="wrapper">
+        <header class="header">
             <div class="container clearfix">
                 <div class="header__logo">
                     <a href="about.html" class="header__logo-text">Афродита
                      </a>
                 </div>
-                <div class="header__info">
+                <adress class="header__info">
                     <div class="header__phone">
                         <a href="tel:88000039210" class="header__phone-num">
                             8 (800) 00-392-10
                         </a>
                     </div>
-                    <div class="header__schedule">
+                    <button class="header__schedule">
                         График работы
+                    </button>
+                    <div class="schedule">
+                        <span class="schedule__time">
+                        пн-вс: 09:00-20:00
+                        </span>
+                        <span class="schedule__lunch">
+                        обед: 14:00-14:30
+                        </span>
                     </div>
-                </div>
+                </adress>
             </div>
-        </div>
-        <div class="main-content">
+        </header>
+        <main class="main-content">
             <div class="container clearfix">
-                <div class="main-section">
+                <div class="content">
                     <ul class="breadcrumbs">
                         <li class="breadcrumbs__item">
-                            <a href="" class="breadcrumbs__link">Главная</a>
+                            <a href="about.html" class="breadcrumbs__link">
+                                Главная
+                            </a>
                         </li>
                         </li>
                         <li class="breadcrumbs__item">
-                            <a href="" class="breadcrumbs__link breadcrumbs__link_active">Услуги</a>
+                            <span class="breadcrumbs__link breadcrumbs__link_active">
+                                Услуги
+                           </span>
                         </li>
                     </ul>
-                    
-                <div class="sidebar__menu">
-                    <ul class="sidebar__menu-list">
-                        <li class="sidebar__menu-item">
-                            <a href="#" class="sidebar__menu-link">
-                                <div class="sidebar__icon sidebar__icon_bolt">
+                    <h1 class="title">Отзывы</h1>
+                    <div class="comments">
+                        <ul class="comments__list">
+                            <li class="comments__item clearfix">
+                                <div class="comments__avatar">
+                                    <img src="images/dumbbelman.png">
                                 </div>
-                                <span class="sidebar__menu-text">Главная</span>
-                            </a>
-                        </li>
-                        <li class="sidebar__menu-item">
-                            <a href="#" class="sidebar__menu-link">
-                                <div class="sidebar__icon sidebar__icon_dumbbel">
+                                <div class="comments__text">
+                                    <p class="comments__date">
+                                        12.10.2016
+                                    </p>
+                                    <p class="comments__name">
+                                        Алексей Воронов
+                                    </p>
+                                    <p class="comments__desc">
+                                        Пришел, чтобы похудеть немного к лету, но благодаря тренеру Александру Ковалеву, получилось накачать нормальные банки. Втянулся, теперь занимаюсь регулярно, 2 раза в неделю, доволен и всем советую. Кстати, польза от тренировок намного заметнее, если придерживаться ПП. Рацион мне составили на неделю, но я его повторяю, не надоедает.
+                                    </p>
                                 </div>
-                                <span class="sidebar__menu-text">Услуги</span>
-                            </a>
-                        </li>
-                        <li class="sidebar__menu-item">
-                            <a href="#" class="sidebar__menu-link">
-                                <div class="sidebar__icon sidebar__icon_star">
+                            </li>
+                            <li class="comments__item clearfix">
+                                <div class="comments__avatar">
+                                    <img src="images/girl.png">
                                 </div>
-                                <span class="sidebar__menu-text">Отзывы</span>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <div class="footer">
-            <div class="container">
-                <div class="footer__info">
-                    <div class="footer__info-text">
-                        <p>Сделано с любовью и старанием</p>
-                        <p>на курсе "HTML + CSS" в <a href="#">Loftschool</a></p>
-                        Автор работы
+                                <div class="comments__text">
+                                    <p class="comments__date">
+                                        01.02.2016
+                                    </p>
+                                    <p class="comments__name">
+                                        Инна Смольная
+                                    </p>
+                                    <p class="comments__desc">
+                                        Подарили на день рождения абонемент в бассейн, пришлось воспользоваться. Сама бы я сюда не пришла, не очень нравится плавать с мужиками, которые пялятся постоянно, администрации следует обратить внимание на этот вопрос! Еще бросилось в глаза хамство обслуживающего персонала. Уборщица в раздевалке вела себя, как будто это к ней в гости пришли.
+                                    </p>
+                                </div>
+                            </li>
+                            <li class="comments__item clearfix">
+                                <div class="comments__avatar">
+                                    <img src="images/afrofita.png">
+                                </div>
+                                <div class="comments__text">
+                                    <p class="comments__date">
+                                        22.12.2015
+                                    </p>
+                                    <p class="comments__name">
+                                        Владимир Савельев
+                                    </p>
+                                    <p class="comments__desc">
+                                        Норм клуб, железа хватает, но техника устаревшая. За эту цену – прокатит. Если хотите большего, то обращайтесь в специализированные тренажерки с новым железом и европейской техникой.
+                                    </p>
+                                </div>
+                            </li>
+                            <li class="comments__item clearfix">
+                                <div class="comments__avatar">
+                                    <img src="images/girl2.png">
+                                </div>
+                                <div class="comments__text">
+                                    <p class="comments__date">
+                                        14.08.2015
+                                    </p>
+                                    <p class="comments__name">
+                                        Ирина Савина
+                                    </p>
+                                    <p class="comments__desc">
+                                        Занимаюсь 4й месяц на петлях ТРХ и очень нравится результат. Даже знакомые отметили, что я помолодела, появилась талия, ножки постройнели. Нагрузка сначала была непривычная, но втягиваешься быстро, тем более, что отражение в зеркале радует. Цены приятные, а если платить на полгода вперед, то вообще выгодно получается, скидка почти 30%.
+                                    </p>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="pagination">
+                        <div class="pagination__title">
+                            Страница 1 из 7
+                        </div>
+                        <a href="#" class="pagination__button pagination__button_prev">
+                            < </a>
+                                <ul class="pagination__list">
+                                    <li class="pagination__item pagination__item_active">
+                                        <a href="#" class="pagination__link">
+                                        1
+                                       </a>
+                                    </li>
+                                    <li class="pagination__item">
+                                        <a href="#" class="pagination__link">
+                                        2
+                                       </a>
+                                    </li>
+                                    <li class="pagination__item">
+                                        <a href="#" class="pagination__link">
+                                        3
+                                       </a>
+                                    </li>
+                                    <li class="pagination__item">
+                                        <a href="#" class="pagination__link">
+                                        4
+                                       </a>
+                                    </li>
+                                    <li class="pagination__item">
+                                        <a href="#" class="pagination__link">
+                                        5
+                                        </a>
+                                    </li>
+                                    <li class="pagination__item">
+                                        <a href="#" class="pagination__link">
+                                        6
+                                        </a>
+                                    </li>
+                                    <li class="pagination__item">
+                                        <a href="#" class="pagination__link">
+                                        7
+                                       </a>
+                                    </li>
+                                </ul>
+                                <a href="#" class="pagination__button pagination__button_next">></a>
                     </div>
                 </div>
-                <div class="footer__logo-text">
-                    <h1>Афродита</h1>
+                <nav class="sidebar__menu">
+                    <ul class="sidebar__menu-list">
+                        <li class="sidebar__menu-item">
+                            <a href="about.html" class="sidebar__menu-link">
+                                <div class="sidebar__icon sidebar__icon_bolt">
+                                </div>
+                                <span class="sidebar__menu-text sidebar__menu-text">
+                                    Главная
+                                </span>
+                            </a>
+                        </li>
+                        <li class="sidebar__menu-item">
+                            <a href="service.html" class="sidebar__menu-link">
+                                <div class="sidebar__icon sidebar__icon_dumbbel_light">
+                                </div>
+                                <span class="sidebar__menu-text ">Услуги</span>
+                            </a>
+                        </li>
+                        <li class="sidebar__menu-item">
+                            <a href="comments.html" class="sidebar__menu-link">
+                                <div class="sidebar__icon sidebar__icon_star-black">
+                                </div>
+                                <span class="sidebar__menu-text sidebar__menu-text_balck">
+                                Отзывы
+                            </span>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </main>
+    </div>
+    <footer class="footer">
+        <div class="container clearfix">
+            <div class="footer__info">
+                <p>Сделано с любовью и старанием</p>
+                <p>на курсе "HTML + CSS" в <a href="#" class="footer__info-link">Loftschool</a></p>
+                <p>Автор работы</p>
+            </div>
+            <div class="footer__logo">
+                <a href="about.html" class="footer__logo-text">Афродита
+                     </a>
+            </div>
+            <div class="socials">
+                <div class="socials__title">
+                    <span class="socials__title-text">Наши социальные сети</span>
                 </div>
-                <div class="socials">
-                    <div class="socials__title">Наши социальные сети</div>
+                <div class="socials__icons">
                     <ul class="socials__list">
                         <li class="socials__item">
                             <a href="" class="socials__link">
                             <img src="images/icons/vk.png" alt="" class="socials__icon">
-                        </a>
+                               </a>
                         </li>
                         <li class="socials__item">
                             <a href="" class="socials__link">
                             <img src="images/icons/fb.png" alt="" class="socials__icon">
-                        </a>
+                                </a>
                         </li>
                         <li class="socials__item">
                             <a href="" class="socials__link">
                             <img src="images/icons/google.png" alt="" class="socials__icon">
-                        </a>
+                               </a>
                         </li>
                         <li class="socials__item">
                             <a href="" class="socials__link">
                             <img src="images/icons/twitter.png" alt="" class="socials__icon">
-                        </a>
+                               </a>
                         </li>
                         <li class="socials__item">
                             <a href="" class="socials__link">
                             <img src="images/icons/mail.png" alt="" class="socials__icon">
-                        </a>
+                               </a>
                         </li>
                     </ul>
                 </div>
             </div>
         </div>
-    </div>
+    </footer>
 </body>
+
 </html>
